--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Posokhov Timofei</string>
+    <string name="googleee">Googleee</string>
+    <string name="text">text</string>
+    <string name="advertising">Advertising</string>
 </resources>
