--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Posokhov Timofei</string>
+    <string name="app_name">JavaMob</string>
+    <string name="hello_practice_java">Hello practice java</string>
+    <string name="chain">chain</string>
+    <string name="button">Button</string>
+    <string name="textview">TextView</string>
+    <string name="uwu_hint">no_way</string>
 </resources>
